--- a/styles/global.css
+++ b/styles/global.css
@@ -1,37 +1,81 @@
+/* FuturaPT Font */
+
 @font-face {
   font-family: FuturaPT;
   font-weight: 100;
-  src: url("/static/fonts/FuturaPTLight.otf") format("opentype");
+  src: url("/fonts/Futura/FuturaPTLight.otf") format("opentype");
+}
+@font-face {
+  font-family: FuturaPT;
+  font-weight: 300;
+  src: url("/fonts/Futura/FuturaPTBook.otf") format("opentype");
 }
 @font-face {
   font-family: FuturaPT;
   font-weight: 400;
-  src: url("/static/fonts/FuturaPTBook.otf") format("opentype");
-}
-@font-face {
-  font-family: FuturaPT;
-  font-weight: 400;
-  src: url("/static/fonts/FuturaPTMedium.otf") format("opentype");
+  src: url("/fonts/Futura/FuturaPTMedium.otf") format("opentype");
 }
 @font-face {
   font-family: FuturaPT;
   font-weight: 500;
-  src: url("/static/fonts/FuturaPTDemi.otf") format("opentype");
+  src: url("/fonts/Futura/FuturaPTDemi.otf") format("opentype");
 }
 @font-face {
   font-family: FuturaPT;
   font-weight: 600;
-  src: url("/static/fonts/FuturaPTHeavy.otf") format("opentype");
+  src: url("/fonts/Futura/FuturaPTHeavy.otf") format("opentype");
 }
 @font-face {
   font-family: FuturaPT;
   font-weight: 700;
-  src: url("/static/fonts/FuturaPTBold.otf") format("opentype");
+  src: url("/fonts/Futura/FuturaPTBold.otf") format("opentype");
 }
 @font-face {
   font-family: FuturaPT;
   font-weight: 900;
-  src: url("/static/fonts/FuturaPTExtraBold.otf") format("opentype");
+  src: url("/fonts/Futura/FuturaPTExtraBold.otf") format("opentype");
+}
+
+/* Raleway Font */
+@font-face {
+  font-family: Raleway;
+  font-weight: 100;
+  src: url("/fonts/Raleway/Raleway-Thin.ttf") format("truetype");
+}
+@font-face {
+  font-family: Raleway;
+  font-weight: 300;
+  src: url("/fonts/Raleway/Raleway-Light.ttf") format("truetype");
+}
+@font-face {
+  font-family: Raleway;
+  font-weight: 400;
+  src: url("/fonts/Raleway/Raleway-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: Raleway;
+  font-weight: 500;
+  src: url("/fonts/Raleway/Raleway-Medium.ttf") format("truetype");
+}
+@font-face {
+  font-family: Raleway;
+  font-weight: 600;
+  src: url("/fonts/Raleway/Raleway-SemiBold.ttf") format("truetype");
+}
+@font-face {
+  font-family: Raleway;
+  font-weight: 700;
+  src: url("/fonts/Raleway/Raleway-Bold.ttf") format("truetype");
+}
+@font-face {
+  font-family: Raleway;
+  font-weight: 800;
+  src: url("/fonts/Raleway/Raleway-ExtraBold.ttf") format("truetype");
+}
+@font-face {
+  font-family: Raleway;
+  font-weight: 900;
+  src: url("/fonts/Raleway/Raleway-Black.ttf") format("truetype");
 }
 
 /*
@@ -54,12 +98,13 @@ a {
   text-decoration: none;
 }
 
-a:hover {
-  text-decoration: none;
-}
 
- img {
+img {
   max-width: 100%;
   display: block;
 } 
 */
+
+a:hover {
+  text-decoration: none !important;
+}
