--- a/styles/global.css
+++ b/styles/global.css
@@ -1,28 +1,28 @@
-/* FuturaPT Font */
-@font-face {
-  font-family: FuturaPT;
+/* Commissioner Font */
+/* @font-face {
+  font-family: MainFont;
   font-style: normal;
   font-weight: 400;
   src: url(/fonts/Futura/FuturaPTMedium.otf) format("opentype"), local("Arial");
   font-display: swap;
 }
 @font-face {
-  font-family: FuturaPT;
+  font-family: MainFont;
   font-style: normal;
   font-weight: 700;
   src: url(/fonts/Futura/FuturaPTBold.otf) format("opentype"), local("Arial");
   font-display: swap;
-}
+} */
 
 /*
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: FuturaPT, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  font-family: Commissioner, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
    line-height: 2; 
-  font-size: 16px;
+  font-size: 14px;
 }
 
 * {
